# handheld-fan-control

./: package.json  plugin.json
backend/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  conanfile.py  entrypoint.sh  requirements.txt
backend/conf/: default.toml
backend/proto/: FanControlService.proto
backend/scripts/: conan_install_debug.sh  conan_install_release.sh  fix_formatting.sh
backend/src/core/: ApplicationCoreContext.hpp  FanController.cpp  FanController.hpp  ProtoConversion.cpp  ProtoConversion.hpp
backend/src/core/device/: BaseDeviceInterface.cpp  BaseDeviceInterface.hpp  MockDeviceInterface.cpp  MockDeviceInterface.hpp  SteamDeckInterface.cpp  SteamDeckInterface.hpp
backend/src/daemon/: DaemonServer.cpp  DaemonServer.hpp  FanControlServiceServer.cpp  FanControlServiceServer.hpp  RequestIdGenerator.cpp  RequestIdGenerator.hpp  RequestProcessor.cpp  RequestProcessor.hpp  UnixDomainServer.cpp  UnixDomainServer.hpp
backend/src/meta/: Error.hpp  Metadata.cpp  Metadata.hpp
backend/src/utils/: Environment.cpp  Environment.hpp  Logging.cpp  Logging.hpp  ProtobufTools.cpp  ProtobufTools.hpp  Time.cpp  Time.hpp
backend/test/: main.cpp
backend/test/proto/: ProtoForTests.proto
backend/test/tests/meta/: Error.Tests.cpp  Metadata.Tests.cpp
backend/test/tests/utils/: ProtobufTools.Tests.cpp
